--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "20.18.0"
   },
   "scripts": {
-    "start":"node --watch index.js",
+    "start": "node --watch index.js",
     "dev": "node --watch index.js"
   },
   "keywords": [],
@@ -26,6 +26,7 @@
     "mongoose": "^8.9.0",
     "nanoid": "^5.0.9",
     "nodemailer": "^6.9.16",
-    "pm2": "^5.4.3"
+    "pm2": "^5.4.3",
+    "resend": "^4.1.1"
   }
 }
